--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -9,12 +9,11 @@
         <p>you can share and exchange  your opinions , inpressions , and emotions</p>
         <p> about various books!</p>
         
-        　　　　
         <div>
-            <%= link_to "log in", new_user_session_path, class:"btn btn-info btn-sm btn-block mb-3 sign_in" %>
+            <%= link_to "Log in", new_user_session_path, class:"btn btn-info btn-sm btn-block mb-3 sign_in" %>
         </div>
         <div>
-            <%= link_to "sign up", new_user_registration_path, class:"btn btn-success btn-sm btn-block sign_up" %>
+            <%= link_to "Sign up", new_user_registration_path, class:"btn btn-success btn-sm btn-block sign_up" %>
         </div>
         </div>
     </div>
