--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,7 @@
-<h1>welcome to <i class="fas fa-book"></i>Bookers!</h1>
+<div class="container">
+  <div class="row">
+    <h1 class="px-3 mx-auto"></h1>
+    <h1>welcome to <i class="fas fa-book"></i>Bookers!</h1>
+   </div>
+</div>
+
