--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -7,7 +7,7 @@
           <th>name</th><th><%= user.name %></th>
       </tr>
   <tr>
-	  <th>introduction</th>
+	  <th>introduction</th><th><%= user.introduction %></th>
   </tr>
 </tbody></table>
 
