--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
     <% if user_signed_in? %>
           
           <li>
-            <%= link_to books_path, class: "nav-link text-light" do %>
+            <%= link_to user_path(current_user.id), class: "nav-link text-light" do %>
             <i class="fas fa-home"></i>
             Home
             <% end %>
@@ -44,7 +44,7 @@
             </li>
             
           <li>
-            <%= link_to root_path, class: "nav-link text-light" do %>
+            <%= link_to destroy_user_session_path, method: :delete, class: "nav-link text-light" do %>
             <i class="fas fa-sign-out-alt"></i>
             Log out
             <% end %>
