--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,22 +1,24 @@
+<p id="notice"></p>
 <div class="container">
   <div class="row">
      <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
 
-        <h1>Editing Book</h1>
+        <h2>User info</h2>
         <% if @user.errors.any? %>
-  <%= @user.errors.count %>errors prohibited this obj from being
-  <ul>
-    <% @user.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
+          <%= @user.errors.count %>errors prohibited this obj from being
+          <ul>
+            <% @user.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+            <% end %>
 
         <%= form_with model: @user do |f| %>
 
           <div class="form-group">
-            <label for="user_name">name</label>
-          <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%><br>
+            <label for="user_name">Name</label>
+            <input class="form-control name" type="text"name="user[name]" id="user_name">
+          <%= f.text_field :name, autofocus: true, id:"user_name"%>
 
            <label for="user_Image">Image</label>
           <%= f.file_field :image, placeholder: "プロフィール画像", accept: "image/*" %>
