Rspecテスト修正

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -27,7 +27,7 @@
           <input type="submit" name="commit" value="Update Book" class="btn btn-success" data-disable-with="Update Book"><br>
           </div>
           <span>
-          <%= link_to "show", book_path(@book.id) %>
+          <%= link_to "Show", book_path(@book.id) %>
           </span>
           |
         　<a class="back" href="/books">Back</a>
