--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,11 @@
       <div class="container">
         <div class="row">
       
-          <div class="col-md-4">
+          <div class="col-md-3">
           <%= render 'users/info', user: @user %>
           </div>
       
-      <div class="col-md-8">
+      <div class="col-md-8 offset-md-1">
          <h2>Books</h2>
             <table class="table table-hover table-inverse">
               <thead>
@@ -23,7 +23,10 @@
                   <thead>
                     <tbody>
                       <tr>
-                        <td><%= image_tag book.user.get_profile_image(100,100) %></td>
+                        <td>
+                          <%= link_to user_path(book.user.id) do %>
+                          <%= image_tag book.user.get_profile_image(100,100) %>
+                          <% end %></td>
                         <td><%= link_to book.title, "/books/#{book.id}" %></td>
                         <td><%= book.body %></td>
                       </tr>
