--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,23 +2,25 @@
 <div class="container">
   <div class="row">
 
-<div class="col-md-4">
+<div class="col-md-3">
 <%= render 'users/info', user: @user %>
 
 </div>
 
-<div class="col-md-8">
+<div class="col-md-8 offset-md-1">
 <h2>Book detail</h2>
 <table class="table">
   <tr>
     <td>
+      <%= link_to user_path(@book.user.id) do %>
 <%= image_tag @book.user.get_profile_image(100,100) %><br>
 <%= @book.user.name %></td>
+<% end %>
    <td><%= @book.title %></td>
 <td><%= @book.body %></td>
 <td><% if @book.user == current_user %>
   <%=link_to "Edit", edit_book_path(@book.id),class:"btn btn-success"%>
-    <%= link_to "destroy", book_path(@book), method: :delete,class:"btn btn-danger" %></td>
+    <%= link_to "Destroy", book_path(@book), method: :delete,class:"btn btn-danger" %></td>
   <% end %>
    </tr>
   </tbody>
