--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -17,15 +17,15 @@
 
           <div class="form-group">
             <label for="user_name">Name</label>
-            <input class="form-control name" type="text"name="user[name]" id="user_name">
-          <%= f.text_field :name, autofocus: true, id:"user_name"%>
+            <!--<input class="form-control name" type="text"name="user[name]" id="user_name">-->
+          <%= f.text_field :name, autofocus: true, id:"user_name"%><br>
 
            <label for="user_Image">Image</label>
-          <%= f.file_field :image, placeholder: "プロフィール画像", accept: "image/*" %>
+          <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
 
           <div class="form-group">
           <label for="user_Introduction">Introduction</label>
-          <%= f.text_field :Introduction, autofocus: true, id:"inputName", placeholder:""%>
+          <%= f.text_field :introduction, autofocus: true, id:"inputName", placeholder:""%>
           </div>
           <div class="form-group">
           <%= f.submit "Update User"%>
