--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,12 @@
-        <div class="container">
-            <div class="row">
-
-        <div class="col-md-4">
+         <div class="container px-5 px-sm-0">
+          <div class="row">
+        
+        
+        <div class="col-md-3">
         <%= render 'users/info', user: @user %>
         </div>
 
-        <div class="col-md-8">
+        <div class="col-md-8 offset-md-1">
         <h2>Users</h2>
         <table class="table table-hover table-inverse">
     <thead>
@@ -25,7 +26,7 @@
         <tr>
           <td><%= image_tag user.get_profile_image(100,100) %></td>
           <td><%= user.name %></td>
-          <td><%= link_to "show", user_path(user.id) %></td>
+          <td><%= link_to "Show", user_path(user.id) %></td>
         </tr>
       </tbody>
     </thead>
@@ -36,5 +37,4 @@
     </div>
     </div>
   </div>
-
 
